--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
+    "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1",
     "typescript": "~4.5.5",
+    "vue-cli-plugin-vuetify": "~2.5.1",
     "vue-template-compiler": "^2.6.14"
   }
 }
